--- a/balancingkit_control/package.xml
+++ b/balancingkit_control/package.xml
@@ -49,24 +49,38 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>rospy</build_depend>
+  <!-- <build_depend>roscpp</build_depend> -->
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>control_msgs</build_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>robot_state_publisher</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>controller_interface</build_depend>
+  <build_depend>diff_drive_controller</build_depend>
+  <build_depend>joint_state_controller</build_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>control_msgs</build_export_depend>
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>robot_state_publisher</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
+
+  <exec_depend>rospy</exec_depend>
+  <!-- <exec_depend>roscpp</exec_depend> -->
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>control_msgs</exec_depend>
+  <exec_depend>controller_interface</exec_depend>
+  <exec_depend>diff_drive_controller</exec_depend>
+  <exec_depend>joint_state_controller</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>hardware_interface</exec_depend>
+  <exec_depend>gazebo_ros_control</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
