--- a/balancingkit_control/config/controller.yaml
+++ b/balancingkit_control/config/controller.yaml
@@ -1,4 +1,5 @@
 balancingkit_on_gazebo:
+  # Publisher
   joint_state_controller:
     type: "joint_state_controller/JointStateController"
     publish_rate: 50
@@ -18,7 +19,6 @@ balancingkit_on_gazebo:
     wheel_radius : 0.024
 
     # Wheel separation and radius multipliers
-    wheel_separation_multiplier: 1.0 # default: 1.0
     wheel_radius_multiplier: 1.0 #default: 1.0
     wheel_separation_multiplier: 1.0 #default: 1.0
     base_frame_id: base_footprint
