--- a/balancingkit_control/package.xml
+++ b/balancingkit_control/package.xml
@@ -57,9 +57,12 @@
   <build_depend>controller_manager</build_depend>
   <build_depend>robot_state_publisher</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>controller_interface</build_depend>
   <build_depend>diff_drive_controller</build_depend>
   <build_depend>joint_state_controller</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>gazebo_ros_control</build_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>control_msgs</build_export_depend>
