--- a/balancingkit_description/CMakeLists.txt
+++ b/balancingkit_description/CMakeLists.txt
@@ -9,6 +9,10 @@ project(balancingkit_description)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   urdf
+  roscpp
+  rospy
+  std_msgs
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -132,6 +136,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/balancingkit_description_node.cpp)
+add_executable(balancingkit_model_tf_publisher src/balancingkit_model_tf_publisher.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -144,9 +149,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(balancingkit_model_tf_publisher
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
