--- a/balancingkit_control/config/controller.yaml
+++ b/balancingkit_control/config/controller.yaml
@@ -4,6 +4,13 @@ balancingkit_on_gazebo:
     type: "joint_state_controller/JointStateController"
     publish_rate: 50
 
+  left_joint_effort_controller:
+    type: "effort_controllers/JointEffortController"
+    joint: left_wheel_joint
+  right_joint_effort_controller:
+    type: "effort_controllers/JointEffortController"
+    joint: right_wheel_joint
+
   diff_drive_controller:
     type        : "diff_drive_controller/DiffDriveController"
     left_wheel  : 'left_wheel_joint'
