--- a/balancingkit_control/config/controller.yaml
+++ b/balancingkit_control/config/controller.yaml
@@ -4,12 +4,21 @@ balancingkit_on_gazebo:
     type: "joint_state_controller/JointStateController"
     publish_rate: 50
 
-  left_joint_effort_controller:
-    type: "effort_controllers/JointEffortController"
-    joint: 'left_wheel_joint'
-  right_joint_effort_controller:
-    type: "effort_controllers/JointEffortController"
-    joint: 'right_wheel_joint'
+#  left_joint_effort_controller:
+#    type: "effort_controllers/JointEffortController"
+#    joint: 'left_wheel_joint'
+#  right_joint_effort_controller:
+#    type: "effort_controllers/JointEffortController"
+#    joint: 'right_wheel_joint'
+
+#  left_joint_velocity_controller:
+#    type: "effort_controllers/JointVelocityController"
+#    joint: 'left_wheel_joint'
+#    pid: {p: 100.0, i: 0.01, d: 10.0}
+#  right_joint_velocity_controller:
+#    type: "effort_controllers/JointVelocityController"
+#    joint: 'right_wheel_joint'
+#    pid: {p: 100.0, i: 0.01, d: 10.0}
 
   diff_drive_controller:
     type        : "diff_drive_controller/DiffDriveController"
