--- a/balancingkit_control/package.xml
+++ b/balancingkit_control/package.xml
@@ -61,6 +61,7 @@
   <build_depend>controller_interface</build_depend>
   <build_depend>diff_drive_controller</build_depend>
   <build_depend>joint_effort_controller</build_depend>
+  <build_depend>joint_velocity_controller</build_depend>
   <build_depend>joint_state_controller</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>gazebo_ros_control</build_depend>
@@ -79,6 +80,7 @@
   <exec_depend>controller_interface</exec_depend>
   <exec_depend>diff_drive_controller</exec_depend>
   <exec_depend>joint_effort_controller</exec_depend>
+  <exec_depend>joint_velocity_controller</exec_depend>
   <exec_depend>joint_state_controller</exec_depend>
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
